Product pages: decorative banners #107 - and fix of vertical selector (video too large)

--- a/blocks/vertical-selector/vertical-selector.css
+++ b/blocks/vertical-selector/vertical-selector.css
@@ -52,7 +52,6 @@
 
 .vertical-selector .fragment-viewer *.vs-active {
   min-height: 45vw;
-  max-height: 45vw;
   z-index: 50;
   background-color: #fffffff0;
   display: flex;
